react-web/src/stylesheets/styles.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');

body {
  background-color: #FFF7FB;
  font-family: 'Roboto', sans-serif;
}


/* logo and jumbotron */

#logo {
    position: absolute;
    margin: auto;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 200px;
    margin-top: 240px;
}

.header-background {
  background-image: url('../assets/images/BackgroundPicture.png');
  background-size: cover;
  height: 250px;
  z-index: -2;
}


/* card */

.card {
  text-align: center;
  position: absolute;
  left: 25%;
  top: 150px;
  height: auto;
  margin-top: 200px;
  padding-bottom: 150px;
  width: 50%;
  z-index: -1;
  background-color: #E8C7A9;
}

.card-content {
  margin-top: 80px;
  color: #724085;
}

.admin-table tr:nth-child(even){background-color: #f2f2f2;}

.admin-table tr:hover {background-color: rgb(221, 221, 221);}

.admin-table {
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

.admin-table th {
  background-color: pink;
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  font-size: 1.2em;
}

.admin-table td, .admin-table th {
  border: 1px solid #ddd;
  padding: 8px;
}

.admin-pg-q {
  font-weight: bold;
}

.admin-pg-a {
  /* padding-left: 20%; */
}

FormGroup Label {
  text-align: left;
}

